# uartui

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs
src/tui/: mod.rs  terminal.rs
